--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="main"></div>
+    <script type="text/javascript" src="bundle.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
